--- a/Kiba/View/Finder/KBAFinderController.xib
+++ b/Kiba/View/Finder/KBAFinderController.xib
@@ -6,20 +6,27 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="KBAFinderController">
             <connections>
+                <outlet property="mapView" destination="klV-XH-2hb" id="f9E-Wb-uYj"/>
                 <outlet property="view" destination="2" id="3"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="2" customClass="KBAFinderC">
+        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="2">
             <rect key="frame" x="0.0" y="0.0" width="768" height="1004"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="BW7-cG-agp">
-                    <rect key="frame" x="-160" y="-217" width="933" height="1221"/>
+                <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" showsUserLocation="YES" translatesAutoresizingMaskIntoConstraints="NO" id="klV-XH-2hb">
+                    <rect key="frame" x="0.0" y="0.0" width="768" height="1004"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                 </mapView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstAttribute="trailing" secondItem="klV-XH-2hb" secondAttribute="trailing" id="3kV-5Z-fOD"/>
+                <constraint firstAttribute="bottom" secondItem="klV-XH-2hb" secondAttribute="bottom" id="f9t-vj-e26"/>
+                <constraint firstItem="klV-XH-2hb" firstAttribute="top" secondItem="2" secondAttribute="top" id="tVY-mc-qKc"/>
+                <constraint firstItem="klV-XH-2hb" firstAttribute="leading" secondItem="2" secondAttribute="leading" id="vNc-gX-joi"/>
+            </constraints>
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="lightContent"/>
         </view>
     </objects>
