fix in self-service controller

--- a/Kiba/View/SelfService/KBASelfServiceController.xib
+++ b/Kiba/View/SelfService/KBASelfServiceController.xib
@@ -408,4 +408,7 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
             <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
         </view>
     </objects>
+    <resources>
+        <image name="Scheck" width="800" height="291"/>
+    </resources>
 </document>
