--- a/Kiba/View/SelfService/KBASelfServiceController.xib
+++ b/Kiba/View/SelfService/KBASelfServiceController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.iPad.XIB" version="3.0" toolsVersion="4514" systemVersion="12F45" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.iPad.XIB" version="3.0" toolsVersion="4514" systemVersion="13A603" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
     </dependencies>
@@ -73,21 +73,21 @@
                             <fontDescription key="fontDescription" type="system" pointSize="16"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" showsHorizontalScrollIndicator="NO" text="Hier können sie Ihre Kontoauszüge für einen beliebigen Zeitraum drucken." translatesAutoresizingMaskIntoConstraints="NO" id="g53-X4-pif">
+                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" showsHorizontalScrollIndicator="NO" editable="NO" text="Hier können sie Ihre Kontoauszüge für einen beliebigen Zeitraum drucken." translatesAutoresizingMaskIntoConstraints="NO" id="g53-X4-pif">
                             <rect key="frame" x="53" y="240" width="260" height="50"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                         </textView>
-                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" showsHorizontalScrollIndicator="NO" text="Jetzt bequem Bescheinigungen z.B. (Bonitätsbescheinigung) ausdrucken." translatesAutoresizingMaskIntoConstraints="NO" id="ag2-gB-WWg">
+                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" showsHorizontalScrollIndicator="NO" editable="NO" text="Jetzt bequem Bescheinigungen z.B. (Bonitätsbescheinigung) ausdrucken." translatesAutoresizingMaskIntoConstraints="NO" id="ag2-gB-WWg">
                             <rect key="frame" x="53" y="411" width="249" height="50"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                         </textView>
-                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" showsHorizontalScrollIndicator="NO" text="Buchen Sie ohne Verzögerung Geld von ihrem Sparkonto auf ihr Tageskonto." translatesAutoresizingMaskIntoConstraints="NO" id="bKL-Ph-cm2">
+                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" showsHorizontalScrollIndicator="NO" editable="NO" text="Buchen Sie ohne Verzögerung Geld von ihrem Sparkonto auf ihr Tageskonto." translatesAutoresizingMaskIntoConstraints="NO" id="bKL-Ph-cm2">
                             <rect key="frame" x="53" y="47" width="271" height="50"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
