completed auto-layout for auth-controller

--- a/Kiba/View/Auth/KBAAuthController.xib
+++ b/Kiba/View/Auth/KBAAuthController.xib
@@ -20,7 +20,7 @@
                     <rect key="frame" x="621" y="458" width="187" height="30"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="187" id="Ozn-Cj-k1i"/>
+                        <constraint firstAttribute="width" constant="187" id="pkb-4t-IHG"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="highlightedColor"/>
@@ -31,8 +31,8 @@
                     <fontDescription key="fontDescription" type="system" pointSize="21"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Vorteil für Sie: verlieren Sie ihr Gerät, können Sie bequem die App deaktivieren lassen." lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="605" translatesAutoresizingMaskIntoConstraints="NO" id="s8D-Q2-STV">
-                    <rect key="frame" x="202" y="346" width="605" height="41"/>
+                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Vorteil für Sie: verlieren Sie ihr Gerät, können Sie bequem die App deaktivieren lassen." lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="609" translatesAutoresizingMaskIntoConstraints="NO" id="s8D-Q2-STV">
+                    <rect key="frame" x="200" y="346" width="609" height="41"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="highlightedColor"/>
@@ -45,7 +45,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RTi-eO-wPU">
-                    <rect key="frame" x="202" y="501" width="93" height="38"/>
+                    <rect key="frame" x="200" y="501" width="93" height="38"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="21"/>
                     <state key="normal" title="validieren!">
@@ -64,20 +64,24 @@
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="ggk-1H-ANl" firstAttribute="leading" secondItem="s8D-Q2-STV" secondAttribute="leading" constant="-2" id="1a3-ly-NIS"/>
-                <constraint firstItem="tbo-VE-TlS" firstAttribute="top" secondItem="ggk-1H-ANl" secondAttribute="top" id="4YW-QM-sDq"/>
-                <constraint firstItem="tbo-VE-TlS" firstAttribute="trailing" secondItem="QWH-fP-4rE" secondAttribute="trailing" id="85c-V4-Yql"/>
-                <constraint firstItem="RTi-eO-wPU" firstAttribute="top" secondItem="ggk-1H-ANl" secondAttribute="bottom" constant="13" id="8D7-iN-CXo"/>
-                <constraint firstItem="QWH-fP-4rE" firstAttribute="top" secondItem="2" secondAttribute="top" constant="219" id="GXi-VD-m1v"/>
-                <constraint firstItem="s8D-Q2-STV" firstAttribute="leading" secondItem="QWH-fP-4rE" secondAttribute="leading" constant="2" id="I9W-HD-Bfx"/>
-                <constraint firstItem="RTi-eO-wPU" firstAttribute="leading" secondItem="ggk-1H-ANl" secondAttribute="leading" constant="2" id="LKF-2l-obh"/>
-                <constraint firstAttribute="centerX" secondItem="3BJ-4b-CL8" secondAttribute="centerX" constant="6" id="W5q-He-C4M"/>
-                <constraint firstItem="3BJ-4b-CL8" firstAttribute="top" secondItem="2" secondAttribute="top" constant="105" id="Y8O-am-e4F"/>
-                <constraint firstItem="tbo-VE-TlS" firstAttribute="leading" secondItem="ggk-1H-ANl" secondAttribute="trailing" constant="8" id="aX6-6d-g9p"/>
-                <constraint firstItem="s8D-Q2-STV" firstAttribute="top" secondItem="QWH-fP-4rE" secondAttribute="bottom" constant="66" id="cNO-4V-MGH"/>
-                <constraint firstAttribute="centerX" secondItem="QWH-fP-4rE" secondAttribute="centerX" constant="8" id="gkC-BH-8o6"/>
-                <constraint firstItem="tbo-VE-TlS" firstAttribute="bottom" secondItem="ggk-1H-ANl" secondAttribute="bottom" id="lAg-5P-KdM"/>
-                <constraint firstItem="tbo-VE-TlS" firstAttribute="top" secondItem="s8D-Q2-STV" secondAttribute="bottom" constant="71" id="zBh-gZ-OLk"/>
+                <constraint firstItem="s8D-Q2-STV" firstAttribute="leading" secondItem="QWH-fP-4rE" secondAttribute="leading" id="7Lg-7i-D0z"/>
+                <constraint firstItem="tbo-VE-TlS" firstAttribute="bottom" secondItem="ggk-1H-ANl" secondAttribute="bottom" id="7Xi-2w-awd"/>
+                <constraint firstAttribute="centerX" secondItem="3BJ-4b-CL8" secondAttribute="centerX" constant="6" id="PNU-PY-kVb"/>
+                <constraint firstItem="QWH-fP-4rE" firstAttribute="top" secondItem="3BJ-4b-CL8" secondAttribute="bottom" constant="88" id="Pxj-ex-1wH"/>
+                <constraint firstItem="s8D-Q2-STV" firstAttribute="top" secondItem="QWH-fP-4rE" secondAttribute="bottom" constant="66" id="USb-z2-RId"/>
+                <constraint firstItem="s8D-Q2-STV" firstAttribute="leading" secondItem="ggk-1H-ANl" secondAttribute="leading" id="UwW-CB-Rpc"/>
+                <constraint firstItem="ggk-1H-ANl" firstAttribute="top" secondItem="s8D-Q2-STV" secondAttribute="bottom" constant="71" id="VEA-hJ-HJ3"/>
+                <constraint firstItem="RTi-eO-wPU" firstAttribute="top" secondItem="2" secondAttribute="top" constant="501" id="WVI-0u-GMP"/>
+                <constraint firstAttribute="centerX" secondItem="s8D-Q2-STV" secondAttribute="centerX" constant="7.5" id="Yk1-lO-1BV"/>
+                <constraint firstItem="tbo-VE-TlS" firstAttribute="top" secondItem="ggk-1H-ANl" secondAttribute="top" id="YxL-dm-fXZ"/>
+                <constraint firstItem="RTi-eO-wPU" firstAttribute="top" secondItem="ggk-1H-ANl" secondAttribute="bottom" constant="13" id="ahU-iA-SiE"/>
+                <constraint firstItem="tbo-VE-TlS" firstAttribute="leading" secondItem="ggk-1H-ANl" secondAttribute="trailing" constant="8" id="bsX-8o-GcK"/>
+                <constraint firstAttribute="centerX" secondItem="QWH-fP-4rE" secondAttribute="centerX" constant="8" id="foE-FT-yn7"/>
+                <constraint firstItem="ggk-1H-ANl" firstAttribute="top" secondItem="2" secondAttribute="top" constant="458" id="lwT-Mx-7c0"/>
+                <constraint firstItem="s8D-Q2-STV" firstAttribute="leading" secondItem="RTi-eO-wPU" secondAttribute="leading" id="pUl-et-EhY"/>
+                <constraint firstItem="tbo-VE-TlS" firstAttribute="trailing" secondItem="QWH-fP-4rE" secondAttribute="trailing" id="r14-6W-EPC"/>
+                <constraint firstItem="3BJ-4b-CL8" firstAttribute="top" secondItem="2" secondAttribute="top" constant="105" id="rGD-wO-Utv"/>
+                <constraint firstItem="s8D-Q2-STV" firstAttribute="top" secondItem="2" secondAttribute="top" constant="346" id="v9J-Hr-PWd"/>
             </constraints>
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="lightContent"/>
             <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
