--- a/Kiba/View/SelfService/KBASelfServiceController.xib
+++ b/Kiba/View/SelfService/KBASelfServiceController.xib
@@ -36,15 +36,15 @@
                         <action selector="connect:" destination="-1" eventType="touchUpInside" id="bWF-pU-zbT"/>
                     </connections>
                 </button>
-                <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="wva-gp-6nP">
+                <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="wva-gp-6nP">
                     <rect key="frame" x="629" y="136" width="20" height="20"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="boolean" keyPath="hidden" value="YES"/>
                     </userDefinedRuntimeAttributes>
                 </activityIndicatorView>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cIz-kq-YHM">
-                    <rect key="frame" x="30" y="190" width="751" height="558"/>
+                <view contentMode="scaleToFill" horizontalHuggingPriority="1000" verticalHuggingPriority="1000" horizontalCompressionResistancePriority="1000" verticalCompressionResistancePriority="1000" translatesAutoresizingMaskIntoConstraints="NO" id="cIz-kq-YHM">
+                    <rect key="frame" x="137" y="190" width="751" height="558"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <subviews>
                         <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="1tE-bi-Kop">
@@ -127,16 +127,14 @@
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="TrA-BV-FUy" firstAttribute="top" secondItem="fQo-AD-f5o" secondAttribute="bottom" constant="30" id="3M9-YL-WjZ"/>
-                <constraint firstAttribute="centerX" secondItem="cIz-kq-YHM" secondAttribute="centerX" constant="106.5" id="AzZ-FN-2dZ"/>
-                <constraint firstItem="fQo-AD-f5o" firstAttribute="top" secondItem="2" secondAttribute="top" constant="78" id="FSm-AO-9WH"/>
-                <constraint firstItem="cIz-kq-YHM" firstAttribute="top" secondItem="TrA-BV-FUy" secondAttribute="bottom" constant="28" id="LBH-5h-e2z"/>
-                <constraint firstAttribute="centerX" secondItem="TrA-BV-FUy" secondAttribute="centerX" constant="-0.5" id="lbQ-vI-hrN"/>
-                <constraint firstAttribute="bottom" secondItem="cIz-kq-YHM" secondAttribute="bottom" constant="20" symbolic="YES" id="o1k-PC-Sue"/>
-                <constraint firstAttribute="centerX" secondItem="fQo-AD-f5o" secondAttribute="centerX" constant="-0.5" id="o2j-lT-dsS"/>
-                <constraint firstItem="cIz-kq-YHM" firstAttribute="top" secondItem="wva-gp-6nP" secondAttribute="bottom" constant="34" id="wpc-ak-v75"/>
-                <constraint firstItem="wva-gp-6nP" firstAttribute="leading" secondItem="TrA-BV-FUy" secondAttribute="trailing" constant="13" id="wxj-y8-9nC"/>
-                <constraint firstItem="cIz-kq-YHM" firstAttribute="leading" secondItem="2" secondAttribute="leading" constant="30" id="ySh-Lt-zJ5"/>
+                <constraint firstItem="cIz-kq-YHM" firstAttribute="top" secondItem="TrA-BV-FUy" secondAttribute="bottom" constant="28" id="0e0-C4-jcY"/>
+                <constraint firstItem="TrA-BV-FUy" firstAttribute="top" secondItem="fQo-AD-f5o" secondAttribute="bottom" constant="30" id="1XO-SU-Kif"/>
+                <constraint firstAttribute="centerX" secondItem="fQo-AD-f5o" secondAttribute="centerX" constant="-0.5" id="3HD-2m-dAb"/>
+                <constraint firstItem="fQo-AD-f5o" firstAttribute="top" secondItem="2" secondAttribute="top" constant="78" id="A4E-2P-gQ8"/>
+                <constraint firstAttribute="bottom" secondItem="cIz-kq-YHM" secondAttribute="bottom" constant="20" symbolic="YES" id="BNE-u6-0Zd"/>
+                <constraint firstItem="fQo-AD-f5o" firstAttribute="centerX" secondItem="TrA-BV-FUy" secondAttribute="centerX" id="Gmh-Xg-Emj"/>
+                <constraint firstAttribute="centerX" secondItem="cIz-kq-YHM" secondAttribute="centerX" constant="-0.5" id="LOm-MK-0yR"/>
+                <constraint firstAttribute="trailing" secondItem="cIz-kq-YHM" secondAttribute="trailing" constant="136" id="aJj-Z4-eAm"/>
             </constraints>
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="lightContent"/>
             <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
